# price_airbnb

./: pyproject.toml
price_airbnb/: get_period_price.py  web_scrape.py
