[tool.poetry]
name = "price-airbnb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "price_airbnb"}]

[tool.poetry.dependencies]
python = "^3.9"
airbnb = "^2.3.2"
beautifulsoup4 = "^4.12.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
